<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.bsav157.comunicacion_app.ui.home.HomeFragment"
        android:label="@string/menu_equipos_sonido"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.bsav157.comunicacion_app.ui.celulares.CelularesFragment"
        android:label="@string/menu_celulares"
        tools:layout="@layout/fragment_celulares" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.bsav157.comunicacion_app.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_accesorios"
        tools:layout="@layout/fragment_slideshow" />
</navigation>